WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174774
[GStreamer] Don't use GraphicsContext3D in VideoTextureCoperGStreamer
https://bugs.webkit.org/show_bug.cgi?id=174774
Summary
[GStreamer] Don't use GraphicsContext3D in VideoTextureCoperGStreamer
Zan Dobersek
Reported
2017-07-24 00:10:04 PDT
[GStreamer] Don't use GraphicsContext3D in VideoTextureCoperGStreamer
Attachments
WIP
(11.53 KB, patch)
2017-07-24 00:10 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch
(13.29 KB, patch)
2017-08-08 04:16 PDT
,
Zan Dobersek
cgarcia
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2017-07-24 00:10:55 PDT
Created
attachment 316271
[details]
WIP
Build Bot
Comment 2
2017-07-24 00:12:59 PDT
Attachment 316271
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zan Dobersek
Comment 3
2017-08-08 04:16:40 PDT
Created
attachment 317559
[details]
Patch
Build Bot
Comment 4
2017-08-08 04:18:22 PDT
Attachment 317559
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/gstreamer/VideoTextureCopierGStreamer.cpp:30: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 5
2017-08-08 06:25:50 PDT
Comment on
attachment 317559
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=317559&action=review
> Source/WebCore/platform/graphics/gstreamer/VideoTextureCopierGStreamer.cpp:30 > +// FIXME: Remove avter TextureMapperShaderProgram drops GraphicsContext3D usage.
after?
> Source/WebCore/platform/graphics/gstreamer/VideoTextureCopierGStreamer.cpp:42 > + // FIXME: Remove avter TextureMapperShaderProgram drops GraphicsContext3D usage.
Ditto.
Zan Dobersek
Comment 6
2017-08-08 06:29:34 PDT
Committed
r220402
: <
http://trac.webkit.org/changeset/220402
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug